fix: add overflow handling to desktop menu;

--- a/src/App.scss
+++ b/src/App.scss
@@ -142,6 +142,12 @@
     span {
       color: #ffffff26;
     }
+    button {
+      transition: color 1s;
+      &:hover{
+        color: rgba(245, 245, 245, 0.613);
+      }
+    }
   }
 }
 
